--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Actionflix</title>
+    <link rel="stylesheet" href="style/main.css">
+    <title>Playflix</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <h2 class="logo">PLAYFLIX</h2>
+            <nav>
+                <a href="#">Inicio</a>
+                <a href="#">Ação</a>
+                <a href="#">Esportes</a>
+                <a href="#">RPG</a>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <div class="jogo-principal">
+            <div class="container">
+                <h3 class="titulo">LEAGUE OF LEGENDS</h3>
+                <p class="descricao">League of Legends é um jogo eletrônico online gratuito, do gênero batalha multijogador.</p>
+            </div>
+            <div class="botoes">
+                <button role="button" class="botao">
+                    ASSISTIR AGORA
+                </button>
+                <button role="button" class="botao">
+                    MAIS INFORMAÇÕES
+                </button>
+            </div>
+            
+        </div>
+    </main>    
 </body>
 </html>
