--- a/index.html
+++ b/index.html
@@ -23,17 +23,20 @@
             <div class="container">
                 <h3 class="titulo">LEAGUE OF LEGENDS</h3>
                 <p class="descricao">League of Legends é um jogo eletrônico online gratuito, do gênero batalha multijogador.</p>
-            </div>
-            <div class="botoes">
-                <button role="button" class="botao">
-                    ASSISTIR AGORA
-                </button>
-                <button role="button" class="botao">
-                    MAIS INFORMAÇÕES
-                </button>
-            </div>
-            
+                <div class="botoes">
+                    <button role="button" class="botao">
+                        <i class="fas fa-play"></i>
+                        ASSISTIR AGORA
+                    </button>
+                    <button role="button" class="botao">
+                        <i class="fas fa-info-circle"></i>
+                        MAIS INFORMAÇÕES
+                    </button>
+                </div>
+            </div>           
         </div>
-    </main>    
+    </main> 
+    
+    <script src="https://kit.fontawesome.com/1abeaacebe.js" crossorigin="anonymous"></script>
 </body>
 </html>
