--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main.css">
+
+    <!--responsividade-->
+    <link rel="stylesheet" href="style/responsive.css">
+    
+    <!--owl css-->
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
+
     <title>Playflix</title>
 </head>
 <body>
@@ -36,7 +44,34 @@
             </div>           
         </div>
     </main> 
+
+    <div class="carrosel-jogos">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-jogo" src="img/min1.png" alt="">
+            </div>
+            <div class="item">
+                <img class="box-jogo" src="img/min2.png" alt="">
+            </div>
+            <div class="item">
+                <img class="box-jogo" src="img/min3.png" alt="">
+            </div>
+            <div class="item">
+                <img class="box-jogo" src="img/min4.png" alt="">
+            </div>
+            <div class="item">
+                <img class="box-jogo" src="img/min5.png" alt="">
+            </div>
+            <div class="item">
+                <img class="box-jogo" src="img/min6.png" alt="">
+            </div>
+        </div>
+    </div>
     
     <script src="https://kit.fontawesome.com/1abeaacebe.js" crossorigin="anonymous"></script>
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/owl/setup.js"></script>
+
 </body>
 </html>
